# more-tech-30-marketplace

./: README.md  docker-compose.yml  example.json  pyproject.toml
app/: main.py
app/api/routes/: api.py  cart.py  datasets.py  steps.py
app/core/: config.py  events.py
app/db/: crud.py  database.py  models.py
app/models/domain/: columns.py  datasets.py  partners.py
app/models/schemas/: datasets.py  features.py  partners.py
app/resources/: strings.py
