[tool.poetry]
name = "marketplace-backend"
version = "0.1.0"
description = "Service for task creation"
authors = ["Rostislav Korst <korst.ra@phystech.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
alembic = "^1.7.4"
python-dotenv = "^0.19.0"
psycopg2-binary = "^2.9.1"
databases = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
